image width fix on mobile screen

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -318,7 +318,7 @@ body {
   }
 
   .inprogress-section {
-    .progress-image {
+    .image-wrapper .progress-image {
       width: 280px;
       height: 280px;
     }
